--- a/app/src/main/res/layout/view_create.xml
+++ b/app/src/main/res/layout/view_create.xml
@@ -12,17 +12,25 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:text="您必须填写您的域名地址\n并且虚拟空间正确的适配 才可以正常使用"
+        android:text="您必须填写您的域名地址\n并且虚拟空间正确的适配\n才可以正常使用\n例如 http://federal-square.top/\n后面的斜杠要加上\n请使用http而不是https"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/edit_txt"
+        android:textColor="@color/black"
+        android:gravity="start"
+        android:maxLength="50"
+        android:textSize="18sp"
+        android:layout_margin="10dp"
+        android:background="@drawable/edit_back"
+        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_ok"
+        android:background="@drawable/button_color_selected_selector"
         android:text="确认"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="50dp"/>
 </LinearLayout>
