--- a/app/src/main/res/layout/discuss_child_layout_view.xml
+++ b/app/src/main/res/layout/discuss_child_layout_view.xml
@@ -2,15 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#00000000"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:background="#ffffff"
         android:layout_width="match_parent"
-        android:layout_height="28dp">
+        android:layout_height="wrap_content">
         <TextView
             android:layout_centerVertical="true"
             android:gravity="center"
