--- a/app/src/main/res/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/create_post_layout.xml
@@ -17,19 +17,29 @@
         <RelativeLayout
             android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp">
+            android:layout_height="40dp">
             <ImageView
                 android:layout_centerVertical="true"
                 android:id="@+id/avatar_img"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_round"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
             <TextView
                 android:layout_toEndOf="@id/avatar_img"
                 android:id="@+id/name"
                 android:layout_marginStart="5dp"
                 android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/url_txt_id"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@id/avatar_img"
+                android:layout_marginStart="5dp"
+                android:textSize="11sp"
                 android:textColor="@color/black"
                 android:text=""
                 android:layout_width="wrap_content"
