--- a/app/src/main/res/layout/view_yinyong_list_item_view.xml
+++ b/app/src/main/res/layout/view_yinyong_list_item_view.xml
@@ -23,7 +23,7 @@
         android:id="@+id/button_system"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
-        android:text="修改"
+        android:text="删除"
         android:layout_width="150dp"
         android:layout_height="50dp"/>
 </LinearLayout>
