--- a/app/src/main/res/layout/view_square.xml
+++ b/app/src/main/res/layout/view_square.xml
@@ -14,6 +14,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
+            android:id="@+id/button_url_setting"
+            android:layout_centerInParent="true"
+            android:layout_alignParentStart="true"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:scaleType="centerCrop"
+                android:layout_centerInParent="true"
+                android:src="@drawable/url_setting_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+        </RelativeLayout>
+        <RelativeLayout
             android:layout_centerHorizontal="true"
             android:layout_width="300dp"
             android:layout_height="wrap_content">
@@ -37,11 +50,12 @@
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/button_add"
+            android:layout_centerInParent="true"
             android:layout_alignParentEnd="true"
             android:layout_width="50dp"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/add_icon"
                 android:layout_width="30dp"
