--- a/app/src/main/res/drawable/round_white_stroke_black.xml
+++ b/app/src/main/res/drawable/round_white_stroke_black.xml
@@ -1,5 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
+
     <solid android:color="#ffffff" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/black"
+        android:dashWidth="0dp"/>
+
 </shape>
