--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -120,4 +120,10 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <com.github.chrisbanes.photoview.PhotoView
+        android:visibility="gone"
+        android:id="@+id/photoView"
+        android:background="@drawable/round_white_stroke_black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
