--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </LinearLayout>
     <androidx.viewpager.widget.ViewPager
         android:visibility="gone"
@@ -91,4 +90,10 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
+    <com.github.chrisbanes.photoview.PhotoView
+        android:visibility="gone"
+        android:id="@+id/photoView"
+        android:background="@drawable/round_white_stroke_black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
