--- a/app/src/main/res/layout/window_personal_information_view.xml
+++ b/app/src/main/res/layout/window_personal_information_view.xml
@@ -65,6 +65,13 @@
             android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textSize="11sp"
+            android:id="@+id/text_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatButton
             android:layout_marginBottom="10dp"
             android:stateListAnimator="@null"
