--- a/app/src/main/res/layout/window_check_reviews.xml
+++ b/app/src/main/res/layout/window_check_reviews.xml
@@ -11,7 +11,7 @@
         android:layout_height="50dp">
         <TextView
             android:layout_centerInParent="true"
-            android:text="讨论"
+            android:text="评论"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
