--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -9,7 +9,7 @@
         android:layout_height="50dp">
         <TextView
             android:layout_centerInParent="true"
-            android:text="查看贴子"
+            android:text="查看文章"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
