--- a/app/src/main/res/layout/activity_disk.xml
+++ b/app/src/main/res/layout/activity_disk.xml
@@ -3,34 +3,47 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".DiskActivity">
-    <RelativeLayout
+    <TextView
         android:id="@+id/top_title"
-        android:background="@drawable/round_white"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-        <TextView
-            android:textColor="@color/black"
-            android:text="资源列表"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+        android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:layout_below="@id/top_title"
+        android:id="@+id/relati"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginStart="10dp"
             android:stateListAnimator="@null"
             android:id="@+id/button_network_disk"
             android:textColor="@color/black"
             android:background="@drawable/button_color_selected_selector"
-            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:text="上传图片"
             android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
             android:layout_height="40dp"/>
+        <TextView
+            android:textColor="@color/black"
+            android:text="图片资源"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+        <ImageView
+            android:layout_centerInParent="true"
+            android:layout_margin="10dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/return_icon"
+            android:id="@+id/return_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
     </RelativeLayout>
     <TextView
-        android:layout_below="@id/top_title"
+        android:layout_below="@id/relati"
         android:id="@id/xian1"
         android:alpha="0.5"
         android:background="#808080"
