--- a/app/src/main/res/layout/activity_view_essay.xml
+++ b/app/src/main/res/layout/activity_view_essay.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"/>
         <ImageView
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
