--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -2,29 +2,41 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#ffffff"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/top_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <RelativeLayout
         android:id="@+id/relati"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_title">
+
         <TextView
-            android:layout_centerInParent="true"
-            android:text="查看文章"
-            android:textSize="18sp"
-            android:textColor="@color/black"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:text="查看文章"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
         <ImageView
-            android:layout_margin="10dp"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/return_icon"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="10dp"
+            android:layout_centerHorizontal="true"
             android:id="@+id/return_icon"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/return_icon" />
     </RelativeLayout>
     <TextView
         android:layout_below="@id/relati"
-        android:alpha="0.2"
+        android:alpha="0.5"
         android:id="@+id/xian1"
         android:background="#808080"
         android:layout_width="match_parent"
@@ -36,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:background="#ffffff"
             android:layout_marginBottom="50dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -102,15 +115,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:background="#f2f3f7"
+                android:alpha="0.5"
+                android:background="#808080"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
             <LinearLayout
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
                 android:orientation="vertical"
                 android:id="@+id/linear_check"
                 android:layout_width="match_parent"
