--- a/app/src/main/res/layout/window_check_reviews.xml
+++ b/app/src/main/res/layout/window_check_reviews.xml
@@ -13,11 +13,13 @@
             android:layout_centerInParent="true"
             android:text="评论"
             android:textSize="18sp"
+            android:gravity="center"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="30dp"/>
         <ImageView
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
@@ -25,7 +27,7 @@
             android:layout_height="30dp"/>
     </RelativeLayout>
     <TextView
-        android:alpha="0.2"
+        android:alpha="0.5"
         android:background="#808080"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
