--- a/app/src/main/res/layout/window_essay_system.xml
+++ b/app/src/main/res/layout/window_essay_system.xml
@@ -12,12 +12,14 @@
         <TextView
             android:layout_centerInParent="true"
             android:text="文章设置"
+            android:gravity="center"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
-            android:layout_margin="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
@@ -25,7 +27,7 @@
             android:layout_height="30dp"/>
     </RelativeLayout>
     <TextView
-        android:alpha="0.2"
+        android:alpha="0.5"
         android:id="@+id/xian"
         android:background="#808080"
         android:layout_width="match_parent"
