--- a/app/src/main/res/layout/window_url_setting_view.xml
+++ b/app/src/main/res/layout/window_url_setting_view.xml
@@ -7,16 +7,18 @@
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="50dp">
         <TextView
             android:layout_centerInParent="true"
             android:text="修改域名"
             android:textSize="18sp"
+            android:gravity="center"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
-            android:layout_margin="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
