--- a/app/src/main/res/layout/activity_view_collection.xml
+++ b/app/src/main/res/layout/activity_view_collection.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"/>
         <ImageView
+            android:layout_marginEnd="10dp"
             android:layout_centerInParent="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
