--- a/app/src/main/res/layout/create_post_img_layout.xml
+++ b/app/src/main/res/layout/create_post_img_layout.xml
@@ -12,20 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
-            android:scaleType="fitStart"
+            android:scaleType="fitXY"
             android:id="@+id/img0"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <ImageView
-            android:scaleType="fitStart"
+            android:scaleType="fitXY"
             android:layout_marginStart="5dp"
             android:id="@+id/img1"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <ImageView
-            android:scaleType="fitStart"
+            android:scaleType="fitXY"
             android:layout_marginStart="5dp"
             android:id="@+id/img2"
             android:layout_weight="1"
