--- a/app/src/main/res/layout/view_square.xml
+++ b/app/src/main/res/layout/view_square.xml
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_centerInParent="true"
                 android:textColor="@color/black"
-                android:text="联邦广场"
+                android:text="时间线"
                 android:id="@+id/title"
                 android:textSize="18sp"
                 android:gravity="center"
