--- a/app/src/main/res/layout/view_hot.xml
+++ b/app/src/main/res/layout/view_hot.xml
@@ -16,7 +16,7 @@
             android:id="@+id/title_txt"
             android:textSize="18sp"
             android:textColor="@color/black"
-            android:text="热门推荐"
+            android:text="热门文章"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="30dp"/>
