--- a/app/src/main/res/layout/create_post_img_layout.xml
+++ b/app/src/main/res/layout/create_post_img_layout.xml
@@ -1,35 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#00000000"
+    android:id="@+id/img_linear1"
+    android:visibility="gone"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/img_linear1"
-        android:visibility="gone"
-        android:orientation="horizontal"
-        android:background="#00000000"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:scaleType="fitXY"
-            android:id="@+id/img0"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:scaleType="fitXY"
-            android:layout_marginStart="5dp"
-            android:id="@+id/img1"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:scaleType="fitXY"
-            android:layout_marginStart="5dp"
-            android:id="@+id/img2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+    <ImageView
+        android:scaleType="fitStart"
+        android:id="@+id/img0"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:scaleType="fitStart"
+        android:layout_marginStart="5dp"
+        android:id="@+id/img1"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:scaleType="fitStart"
+        android:layout_marginStart="5dp"
+        android:id="@+id/img2"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
