--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
     android:layout_height="match_parent">
     <TextView
@@ -60,13 +60,16 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp">
-                <ImageView
+                <net.csdn.roundview.RoundImageView
                     android:layout_centerVertical="true"
-                    android:id="@+id/avatar_img"
-                    android:scaleType="centerCrop"
                     android:src="@mipmap/ic_launcher_round"
+                    android:id="@+id/avatar_img"
                     android:layout_width="40dp"
-                    android:layout_height="40dp"/>
+                    android:layout_height="40dp"
+                    android:scaleType="centerCrop"
+                    app:rStrokeWidth="1dp"
+                    app:rStrokeColor="#f2f3f7"
+                    app:rRadius="10dp"/>
                 <TextView
                     android:layout_toEndOf="@id/avatar_img"
                     android:id="@+id/name"
@@ -115,8 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:alpha="0.5"
-                android:background="#808080"
+                android:background="#f2f3f7"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
             <LinearLayout
