--- a/app/src/main/res/layout/create_post_img_layout.xml
+++ b/app/src/main/res/layout/create_post_img_layout.xml
@@ -8,12 +8,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
+        android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:id="@+id/img0"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
     <ImageView
+        android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:layout_marginStart="5dp"
         android:id="@+id/img1"
@@ -21,6 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
     <ImageView
+        android:layout_gravity="bottom"
         android:scaleType="fitStart"
         android:layout_marginStart="5dp"
         android:id="@+id/img2"
