--- a/app/src/main/res/layout/activity_disk.xml
+++ b/app/src/main/res/layout/activity_disk.xml
@@ -22,15 +22,14 @@
             android:layout_height="40dp"/>
         <TextView
             android:textColor="@color/black"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:text="图片资源"
             android:textSize="18sp"
             android:gravity="bottom"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"/>
+            android:layout_height="wrap_content"/>
         <ImageView
-            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:layout_marginEnd="10dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
