--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -12,14 +12,14 @@
     <RelativeLayout
         android:id="@+id/relati"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/top_title">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:gravity="center"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:text="查看文章"
             android:textColor="@color/black"
             android:textSize="18sp" />
@@ -27,7 +27,6 @@
         <ImageView
             android:layout_centerInParent="true"
             android:layout_marginEnd="10dp"
-            android:layout_centerHorizontal="true"
             android:id="@+id/return_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
