--- a/app/src/main/res/layout/view_square.xml
+++ b/app/src/main/res/layout/view_square.xml
@@ -27,7 +27,7 @@
                 android:layout_height="30dp"/>
         </RelativeLayout>
         <RelativeLayout
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_width="300dp"
             android:layout_height="wrap_content">
             <ImageView
