--- a/app/src/main/res/layout/window_post_view.xml
+++ b/app/src/main/res/layout/window_post_view.xml
@@ -11,13 +11,13 @@
             android:layout_centerInParent="true"
             android:text="发表文章"
             android:textSize="18sp"
-            android:gravity="center"
+            android:gravity="bottom"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
@@ -31,19 +31,8 @@
         android:background="#808080"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
-    <EditText
-        android:layout_below="@id/xian"
-        android:textColor="@color/black"
-        android:maxLength="100"
-        android:textSize="18sp"
-        android:layout_margin="10dp"
-        android:background="@drawable/edit_back"
-        android:padding="10dp"
-        android:id="@+id/edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
     <LinearLayout
-        android:layout_below="@id/edit_text"
+        android:layout_below="@id/xian"
         android:id="@+id/linear_bu"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -71,11 +60,22 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"/>
     </LinearLayout>
+    <EditText
+        android:layout_below="@id/linear_bu"
+        android:textColor="@color/black"
+        android:maxLength="100"
+        android:textSize="18sp"
+        android:layout_margin="10dp"
+        android:background="@drawable/edit_back"
+        android:padding="10dp"
+        android:id="@+id/edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <ScrollView
         android:padding="10dp"
         android:layout_above="@id/button_ok"
-        android:layout_below="@id/linear_bu"
+        android:layout_below="@id/edit_text"
         android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
