--- a/app/src/main/res/layout/window_toast_view.xml
+++ b/app/src/main/res/layout/window_toast_view.xml
@@ -15,7 +15,7 @@
             android:textSize="18sp"
             android:gravity="center"
             android:textColor="@color/black"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <ImageView
             android:layout_marginEnd="10dp"
