--- a/app/src/main/res/layout/window_url_setting_view.xml
+++ b/app/src/main/res/layout/window_url_setting_view.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"/>
         <ImageView
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/return_icon"
             android:id="@+id/return_icon"
