--- a/app/src/main/res/drawable/button_color_selected_focused.xml
+++ b/app/src/main/res/drawable/button_color_selected_focused.xml
@@ -4,10 +4,10 @@
 
     <corners android:radius="10dp" />
 
-    <solid android:color="#f2f3f7" />
+    <solid android:color="#80ffffff" />
 
     <stroke
         android:width="1dp"
-        android:color="#000000" />
+        android:color="#80808080" />
 
 </shape>
