--- a/app/src/main/res/drawable/edit_back.xml
+++ b/app/src/main/res/drawable/edit_back.xml
@@ -3,7 +3,7 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="#efefef"/>
+            <solid android:color="#ffffff"/>
             <corners android:radius="10dp"/>
             <stroke
                 android:width="1dp"
