--- a/app/src/main/res/drawable/round_white_stroke_black.xml
+++ b/app/src/main/res/drawable/round_white_stroke_black.xml
@@ -5,7 +5,7 @@
     <solid android:color="#ffffff" />
     <stroke
         android:width="1dp"
-        android:color="@color/black"
+        android:color="#80808080"
         android:dashWidth="0dp"/>
 
 </shape>
