--- a/app/src/main/res/layout/window_essay_system.xml
+++ b/app/src/main/res/layout/window_essay_system.xml
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
             android:background="@drawable/button_color_selected_selector"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -79,6 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
             android:background="@drawable/button_color_selected_selector"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -108,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
             android:background="@drawable/button_color_selected_selector"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -137,6 +140,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
             android:background="@drawable/button_color_selected_selector"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
