--- a/app/src/main/res/layout/view_enroll.xml
+++ b/app/src/main/res/layout/view_enroll.xml
@@ -54,12 +54,14 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"/>
     <androidx.appcompat.widget.AppCompatButton
+        android:stateListAnimator="@null"
         android:id="@+id/button_enroll"
         android:text="注册"
         android:background="@drawable/button_color_selected_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <androidx.appcompat.widget.AppCompatButton
+        android:stateListAnimator="@null"
         android:layout_marginTop="10dp"
         android:id="@+id/button_login"
         android:text="登录"
