--- a/app/src/main/res/layout/window_delete_file.xml
+++ b/app/src/main/res/layout/window_delete_file.xml
@@ -46,6 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
             android:text="确认"
             android:id="@+id/button_ok"
             android:background="@drawable/button_color_selected_selector"
@@ -53,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
             android:text="不了"
             android:id="@+id/button_no"
             android:layout_marginStart="10dp"
