--- a/app/src/main/res/layout/window_essay_system.xml
+++ b/app/src/main/res/layout/window_essay_system.xml
@@ -27,7 +27,6 @@
             android:layout_height="30dp"/>
     </RelativeLayout>
     <TextView
-        android:alpha="0.5"
         android:id="@+id/xian"
         android:background="#808080"
         android:layout_width="match_parent"
@@ -152,5 +151,34 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>
     </LinearLayout>
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_margin="10dp"
+            android:background="@drawable/edit_back"
+            android:padding="10dp"
+            android:hint="广场刷新计时器 5000为5秒"
+            android:digits="0123456789"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/time_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:stateListAnimator="@null"
+            android:background="@drawable/button_color_selected_selector"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/button_time"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:text="确认"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
