修改说明 修复bug

--- a/app/src/main/res/layout/view_create.xml
+++ b/app/src/main/res/layout/view_create.xml
@@ -12,15 +12,16 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:text="您必须填写您的域名地址\n并且虚拟空间正确的适配\n才可以正常使用\n例如 http://federal-square.top/\n后面的斜杠要加上\n请使用http而不是https\n如果你输入错误\n必须进入系统设置清除数据重新进入软件"
+        android:text="您必须填写您的域名地址\n例如 http://federal-square.top/\n如果你输入错误\n必须进入系统设置清除数据重新进入软件"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:hint="这里写域名"
         android:id="@+id/edit_url"
         android:textColor="@color/black"
         android:gravity="start"
         android:maxLength="50"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:layout_margin="10dp"
         android:background="@drawable/edit_back"
         android:padding="10dp"
@@ -31,15 +32,16 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:text="如果有密码的话请您输入密码\n密码错误将无法获取任何数据\n没有密码可以留空\n初始密码一般为federal-square"
+        android:text="没有密码可以留空\n初始密码一般为federal-square"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:hint="这里写密码"
         android:id="@+id/edit_password"
         android:textColor="@color/black"
         android:gravity="start"
         android:maxLength="50"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:layout_margin="10dp"
         android:background="@drawable/edit_back"
         android:padding="10dp"
