--- a/app/src/main/res/layout/view_yinyong_list_item_view.xml
+++ b/app/src/main/res/layout/view_yinyong_list_item_view.xml
@@ -3,27 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="52dp">
     <EditText
         android:layout_weight="1"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/edit_back"
-        android:padding="10dp"
+        android:padding="15dp"
         android:layout_gravity="center_vertical"
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <androidx.appcompat.widget.AppCompatButton
+        android:stateListAnimator="@null"
         android:background="@drawable/button_color_selected_selector"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
         android:id="@+id/button_system"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:text="删除"
         android:layout_width="150dp"
-        android:layout_height="50dp"/>
+        android:layout_height="52dp"/>
 </LinearLayout>
