--- a/app/src/main/res/layout/window_check_reviews.xml
+++ b/app/src/main/res/layout/window_check_reviews.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@drawable/round_white"
     android:layout_width="match_parent"
@@ -34,18 +32,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
-            android:layout_toLeftOf="@id/button_ok"
+            android:layout_toStartOf="@id/button_ok"
             android:id="@+id/edit_text"
             android:textColor="@color/black"
             android:gravity="start"
+            android:hint="这里写评论"
             android:maxLength="100"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             android:background="@drawable/edit_back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="RtlHardcoded" />
+            android:layout_height="wrap_content" />
         <androidx.appcompat.widget.AppCompatButton
             android:stateListAnimator="@null"
             android:layout_alignParentEnd="true"
@@ -55,7 +53,7 @@
             android:text="发布"
             android:background="@drawable/button_color_selected_selector"
             android:layout_width="80dp"
-            android:layout_height="44dp"/>
+            android:layout_height="52dp"/>
     </RelativeLayout>
     <TextView
         android:layout_marginTop="8dp"
