--- a/app/src/main/res/layout/window_essay_system.xml
+++ b/app/src/main/res/layout/window_essay_system.xml
@@ -38,10 +38,10 @@
         <EditText
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             android:background="@drawable/edit_back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:hint="广场数量 默认50个"
             android:digits="0123456789"
             android:layout_gravity="center_vertical"
@@ -58,8 +58,8 @@
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="确认"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="150dp"
+            android:layout_height="52dp"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -68,10 +68,10 @@
         <EditText
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             android:background="@drawable/edit_back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:hint="热门数量 默认10个"
             android:digits="0123456789"
             android:layout_gravity="center_vertical"
@@ -88,8 +88,8 @@
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="确认"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="150dp"
+            android:layout_height="52dp"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -98,10 +98,10 @@
         <EditText
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             android:background="@drawable/edit_back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:hint="我的文章数量 默认10个"
             android:digits="0123456789"
             android:layout_gravity="center_vertical"
@@ -118,8 +118,8 @@
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="确认"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="150dp"
+            android:layout_height="52dp"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -128,10 +128,10 @@
         <EditText
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             android:background="@drawable/edit_back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:hint="我的收藏数量 默认10个"
             android:digits="0123456789"
             android:layout_gravity="center_vertical"
@@ -148,8 +148,8 @@
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="确认"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="150dp"
+            android:layout_height="52dp"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -158,10 +158,10 @@
         <EditText
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
             android:background="@drawable/edit_back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:hint="广场刷新计时器 5000为5秒"
             android:digits="0123456789"
             android:layout_gravity="center_vertical"
@@ -178,7 +178,7 @@
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="确认"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="150dp"
+            android:layout_height="52dp"/>
     </LinearLayout>
 </LinearLayout>
