--- a/app/src/main/res/layout/window_post_view.xml
+++ b/app/src/main/res/layout/window_post_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/round_white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -65,13 +66,15 @@
         android:layout_below="@id/linear_bu"
         android:textColor="@color/black"
         android:maxLength="100"
-        android:textSize="18sp"
+        android:textSize="15sp"
+        android:hint="这里写文章"
         android:layout_margin="10dp"
         android:background="@drawable/edit_back"
-        android:padding="10dp"
+        android:padding="15dp"
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        tools:ignore="HardcodedText" />
 
     <ScrollView
         android:padding="10dp"
