--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -72,7 +72,7 @@
                     android:layout_toEndOf="@id/avatar_img"
                     android:id="@+id/name"
                     android:layout_marginStart="5dp"
-                    android:textSize="14sp"
+                    android:textSize="15sp"
                     android:textColor="@color/black"
                     android:text=""
                     android:layout_width="wrap_content"
@@ -82,8 +82,8 @@
                     android:layout_alignParentBottom="true"
                     android:layout_toEndOf="@id/avatar_img"
                     android:layout_marginStart="5dp"
-                    android:textSize="11sp"
-                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textColor="#f2f3f7"
                     android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
