修改了很多地方

--- a/app/src/main/res/layout/activity_view_essay.xml
+++ b/app/src/main/res/layout/activity_view_essay.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_below="@id/xian1"
         android:scrollbars="none"
         android:overScrollMode="never"
