--- a/app/src/main/res/layout/view_home_collection.xml
+++ b/app/src/main/res/layout/view_home_collection.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ScrollView
+            android:id="@+id/scrollView"
             android:overScrollMode="never"
             android:scrollbars="none"
             android:layout_width="match_parent"
