--- a/app/src/main/res/layout/disk_item.xml
+++ b/app/src/main/res/layout/disk_item.xml
@@ -2,10 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/img"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:scaleType="center"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"/>
 </LinearLayout>
